--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,3 @@
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.7.9
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.8
-colorama==0.4.6
-distro==1.9.0
-fastapi==0.115.12
 Flask==3.1.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.1
-google-api-python-client==2.176.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
-googleapis-common-protos==1.70.0
-grpcio==1.73.1
-grpcio-status==1.71.2
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.22.0
-httpx==0.28.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.10.0
-keyboard==0.13.5
-MarkupSafe==3.0.2
-MouseInfo==0.1.3
-numpy==2.2.6
-openai==1.95.1
-opencv-python==4.12.0.88
-outcome==1.3.0.post0
-packaging==25.0
-pefile==2023.2.7
-pillow==11.3.0
-proto-plus==1.26.1
-protobuf==5.29.5
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-PyAutoGUI==0.9.54
-pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
-pygame==2.6.1
-PyGetWindow==0.0.9
-pyinstaller==6.13.0
-pyinstaller-hooks-contrib==2025.4
-PyMsgBox==1.0.9
-pyparsing==3.2.3
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySocks==1.7.1
-pytesseract==0.3.13
-python-dotenv==1.1.1
-pytweening==1.2.0
-pywin32==310
-pywin32-ctypes==0.2.3
-qrcode==8.2
-requests==2.32.4
-rsa==4.9.1
-selenium==4.34.2
-setuptools==80.8.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-starlette==0.46.1
-tqdm==4.67.1
-trio==0.30.0
-trio-websocket==0.12.2
-typing-inspection==0.4.0
-typing_extensions==4.14.1
-uritemplate==4.2.0
-urllib3==2.5.0
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-Werkzeug==3.1.3
-winshell==0.6
-wsproto==1.2.0
-flask
-gunicorn
-werkzeug
+gunicorn==21.2.0
+Werkzeug==3.0.1
